dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.12)
AC_INIT(config/libc_r.h)

d=`pwd`
if test "${srcdir}" = "$d" || test "${srcdir}" = "."  ; then
   echo "Do not build in the srcdir as it will override Makefiles used by non-autoconf build."
   exit 1;
fi

AC_CONFIG_AUX_DIR(${srcdir}/build/autoconf)
AC_CANONICAL_SYSTEM

dnl Set this define to make fixes w/o breaking anything else.
AC_DEFINE(USE_AUTOCONF)

dnl Always set this for mozilla.
AC_DEFINE(MOZILLA_CLIENT)

dnl ========================================================
dnl =
dnl = Dont change the following two lines.  Doing so breaks:
dnl =
dnl = CFLAGS="-foo" ./configure
dnl =
dnl ========================================================
CFLAGS="${CFLAGS=}"
CXXFLAGS="${CXXFLAGS=}"
HOSTCFLAGS="${HOSTCFLAGS=}"
HOSTCXXFLAGS="${HOSTCXXFLAGS=}"

AC_ARG_ENABLE(pthreads,
    [  --enable-pthreads           Use system pthreads library as thread subsystem],
    USE_PTHREADS=1,
    USE_PTHREADS=)

AC_ARG_ENABLE(bthreads,
    [  --enable-bthreads           Use system bthreads library as thread subsystem],
    USE_BTHREADS=1,
    USE_BTHREADS=)

AC_ARG_ENABLE(cplus,
    [  --enable-cplus              Use cplus for whatever reason],
    USE_CPLUS=1,
    USE_CPLUS=)

AC_ARG_ENABLE(ipv6,
    [  --enable-ipv6               Compile ipv6 support],
    USE_IPV6=1,
    USE_IPV6=)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB
AC_PATH_PROGS(PERL, perl5 perl, :)
AC_PATH_PROGS(AR, ar, :)

if test "$cross_compiling" = "no"; then
    if test "$HOSTCC" = ""; then
	HOSTCC=$CC
    fi
    if test "$HOSTCXX" = ""; then
	HOSTCXX=$CXX
    fi
    if test "$HOSTCFLAGS" = ""; then
	HOSTCFLAGS=$CFLAGS
    fi
    if test "$HOSTCXXFLAGS" = ""; then
	HOSTCXXFLAGS=$CXXFLAGS
    fi
else
# do some stuff
    echo "Cross compiling"
fi

echo "Using $host $build $target"
case "$host" in
*-linux*)
    HOSTCFLAGS="$HOSTCFLAGS -DXP_UNIX"
    HOSTCXXFLAGS="$HOSTCXXFLAGS -DXP_UNIX"
    ;;

esac

case "$target" in
*-linux*)
    MDCPUCFG_H=_linux.cfg
    PR_MD_CSRCS=linux.c
    PR_MD_ASFILES=
    PR_MD_ARCH_DIR=unix
    if test "$USE_PTHREADS" = 1 ; then
	CFLAGS="$CFLAGS -D_REENTRANT"
    else
	CFLAGS="$CFLAGS -D_PR_LOCAL_THREADS_ONLY"
    fi
    ;;

*-mingw*)
    MDCPUCFG_H=_winnt.cfg
    ;;
esac

dnl Replace `main' with a function in -lC:
AC_CHECK_LIB(C, main)
dnl Replace `main' with a function in -lC_r:
AC_CHECK_LIB(C_r, main)
dnl Replace `main' with a function in -lc:
AC_CHECK_LIB(c, main)
dnl Replace `main' with a function in -lc_r:
AC_CHECK_LIB(c_r, main)
dnl Replace `main' with a function in -ldce:
AC_CHECK_LIB(dce, main)
dnl Replace `main' with a function in -ldl:
AC_CHECK_LIB(dl, main)
dnl Replace `main' with a function in -ldld:
AC_CHECK_LIB(dld, main)
dnl Replace `main' with a function in -lgen:
AC_CHECK_LIB(gen, main)
dnl Replace `main' with a function in -lip6:
AC_CHECK_LIB(ip6, main)
dnl Replace `main' with a function in -ll:
AC_CHECK_LIB(l, main)
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl Replace `main' with a function in -lnsl:
AC_CHECK_LIB(nsl, main)
dnl Replace `main' with a function in -lposix4:
AC_CHECK_LIB(posix4, main)
dnl Replace `main' with a function in -lprstrms:
AC_CHECK_LIB(prstrms, main)
dnl Replace `main' with a function in -lprstrms_shr:
AC_CHECK_LIB(prstrms_shr, main)
dnl Replace `main' with a function in -lpthread:
AC_CHECK_LIB(pthread, main)
dnl Replace `main' with a function in -lpthreads:
AC_CHECK_LIB(pthreads, main)
dnl Replace `main' with a function in -lresolv:
AC_CHECK_LIB(resolv, main)
dnl Replace `main' with a function in -lrt:
AC_CHECK_LIB(rt, main)
dnl Replace `main' with a function in -lsocket:
AC_CHECK_LIB(socket, main)
dnl Replace `main' with a function in -lsvld:
AC_CHECK_LIB(svld, main)
dnl Replace `main' with a function in -lthread:
AC_CHECK_LIB(thread, main)
dnl Replace `main' with a function in -lvms_jackets:
AC_CHECK_LIB(vms_jackets, main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h sys/file.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_ST_BLKSIZE
AC_STRUCT_ST_BLOCKS
AC_STRUCT_ST_RDEV
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_FUNC_MMAP
dnl AC_FUNC_SETVBUF_REVERSED
AC_FUNC_STRCOLL
AC_FUNC_STRFTIME
AC_FUNC_UTIME_NULL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(ftime getcwd gethostname gettimeofday getwd mkdir mktime putenv rmdir select socket strdup strerror strstr strtol strtoul uname)

AC_SUBST(CC)
AC_SUBST(CXX)
AC_SUBST(CFLAGS)
AC_SUBST(CXXFLAGS)
AC_SUBST(HOSTCC)
AC_SUBST(HOSTCXX)
AC_SUBST(HOSTCFLAGS)
AC_SUBST(HOSTCXXFLAGS)

AC_SUBST(MDCPUCFG_H)
AC_SUBST(USE_PTHREADS)
AC_SUBST(USE_BTHREADS)
AC_SUBST(USE_CPLUS)
AC_SUBST(USE_IPV6)
AC_SUBST(PR_MD_CSRCS)
AC_SUBST(PR_MD_ASFILES)
AC_SUBST(PR_MD_ARCH_DIR)

AC_SUBST(DEFS)
AC_SUBST(AR)
AC_SUBST(RANLIB)
AC_SUBST(PERL)

AC_OUTPUT(
Makefile 
config/Makefile
config/autoconf.mk
lib/Makefile 
lib/ds/Makefile 
lib/libc/Makefile 
lib/libc/include/Makefile 
lib/libc/src/Makefile 
lib/msgc/Makefile 
lib/msgc/include/Makefile 
lib/msgc/src/Makefile 
lib/msgc/tests/Makefile
lib/prstreams/Makefile 
lib/tests/Makefile 
pr/Makefile 
pr/include/Makefile 
pr/include/md/Makefile 
pr/include/obsolete/Makefile 
pr/include/private/Makefile 
pr/src/Makefile 
pr/src/bthreads/Makefile 
pr/src/cplus/Makefile 
pr/src/cplus/tests/Makefile 
pr/src/io/Makefile 
pr/src/linking/Makefile 
pr/src/malloc/Makefile 
pr/src/md/Makefile 
pr/src/md/beos/Makefile 
pr/src/md/os2/Makefile 
pr/src/md/unix/Makefile 
pr/src/md/windows/Makefile 
pr/src/memory/Makefile 
pr/src/misc/Makefile 
pr/src/pthreads/Makefile 
pr/src/threads/Makefile 
pr/src/threads/combined/Makefile 
pr/tests/Makefile 
pr/tests/dll/Makefile 
pr/tests/w16gui/Makefile 
tools/Makefile 
)

dnl lib/prstreams/tests/testprstrm/Makefile 
dnl lib/tests/windows/makefile 

