
include $(top_srcdir)/common.mk

noinst_LIBRARIES = libjs2.a

libjs2_a_SOURCES = \
	bytecodegen.cpp \
	collector.cpp \
	exception.cpp \
	formatter.cpp \
	hash.cpp \
	js2runtime.cpp \
	lexer.cpp \
	mem.cpp \
	numerics.cpp \
	parser.cpp \
	reader.cpp \
	strings.cpp \
	token.cpp \
	utilities.cpp \
	world.cpp
